[package]
name = "comfyui-viewer"
version = "0.0.1"
description = "ComfyUI viewer"
authors = ["dcsms"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-all", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
rand = "0.8.5"
[dependencies.tauri-plugin-localhost]
git = "https://github.com/tauri-apps/tauri-plugin-localhost"
tag = "tauri-plugin-localhost-v0.1.0"

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
